# Mastermind

mastermind-api/: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  README.rst  docker-compose.local.yml  docker-compose.production.yml  manage.py  mypy.ini  pyproject.toml
mastermind-api/.envs/.local/: .postgres
mastermind-api/compose/local/django/: Dockerfile
mastermind-api/compose/production/django/: Dockerfile
mastermind-api/compose/production/traefik/: traefik.toml
mastermind-api/config/: urls.py  wsgi.py
mastermind-api/config/settings/: base.py  local.py  production.py  test.py
mastermind-api/docs/: Makefile  conf.py  index.rst  make.bat
mastermind-api/docs/pycharm/: configuration.rst
mastermind-api/mastermind_py/mastermind/: apps.py  domain.py  models.py  repo.py  schemas.py  urls.py  views.py
mastermind-api/tests/: test_mastermind.py
