[tool.poetry]
name = "inari-mastermind"
version = "0.1.0"
description = ""
authors = ["David <davigetto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "2019.1"
python-slugify = "3.0.2"
argon2-cffi = "19.1.0"
redis = "3.2.1"
django-environ = "0.4.5"
django-model-utils = "3.1.2"
django-allauth = "0.39.1"
django-crispy-forms = "1.7.2"
django-redis = "4.10.0"
djangorestframework = "^3.11.2"
coreapi = "2.3.3"
gunicorn = "19.9.0"
psycopg2-binary = "<2.9"
django-storages = {version = "1.7.1", extras = ["boto3"]}
django-anymail = {version = "6.0.1", extras = ["mailgun"]}
Django = "^2.2.25"
Collectfast = "0.6.2"
flake8 = "3.7.7"
coverage = "4.5.3"
black = "19.3b0"
pylint-django = "2.0.9"
factory-boy = "2.12.0"
django-debug-toolbar = "^1.11.1"
django-extensions = "2.1.9"
Werkzeug = "^0.15.3"
Sphinx = "2.1.1"
django_coverage_plugin = "1.6.0"
pydash = "^5.1.0"
marshmallow = "^3.14.1"
django-cors-headers = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-sugar = "^0.9.4"
pytest-django = "^4.5.2"
PyHamcrest = "^2.0.3"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = "test_* *_tests.py *_utests.py"
python_classes = "Test* *Tests"

# I don't exactly know why, but if I don't add the apps folder... it won't work
markers = [
    "acceptancetest: marks a test as an acceptance test",
    "documentation",
    "integrationtest"
]
norecursedirs = ".cache dumps *.egg-info .git appdir .tox"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
